# string-adapter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
examples/: example.rs
src/: lib.rs  utils.rs
