[package]
name = "string-adapter"
version = "1.1.0"
authors = ["LiuliFox <liuifox@qq.com>"]
edition = "2021"
license = "Apache-2.0"
description = "String adapter for casbin-rs"
homepage= "https://github.com/casbin-rs/string-adapter"
repository = "https://github.com/casbin-rs/string-adapter"
readme= "README.md"

[dependencies]
async-std = { version = "1.13.0", default-features = false, optional = true }
async-trait = "0.1.83"
casbin = { version = "2.5.0", default-features = false }
once_cell = "1.20.2"
regex = "1.11.1"
tokio = { version = "1.42.0", default-features = false, optional = true }

[dev-dependencies]
async-std = { version = "1.6.4", features = [ "attributes" ] }
tokio = { version = "1.42.0", features = [ "full" ] }

[features]
default = ["runtime-tokio"]

runtime-async-std = ["casbin/runtime-async-std","async-std"]
runtime-tokio     = ["casbin/runtime-tokio", "tokio/fs", "tokio/io-util"]
